--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock & EDM Festival</title>
+    <meta name="description" content="Practice SASS & Gulp">
+    <link rel="shortcut icon" href="/build/img/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;900&display=swap" rel="stylesheet">
+    <title>Rock & EDM Festival</title>
 
     <link rel="stylesheet" href="build/css/app.css">
 </head>
@@ -219,7 +221,7 @@
     </section>
 
     <footer class="site-footer">
-        <p>Rock & EDM Festival. Todos los derechos reservados</p>
+        <p>Rock & EDM Festival. Todos los derechos reservados <a href="https://github.com/Tackless">Donovan Eliosa</a> &copy; 2021</p>
     </footer>
     
     <script src="build/js/app.js"></script>
