--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
     </section>
 
     <footer class="site-footer">
-        <p>Rock & EDM Festival. Todos los derechos reservados <a href="https://github.com/Tackless">Donovan Eliosa</a> &copy; 2021</p>
+        <p><a href="https://github.com/Tackless">Donovan WebP</a> - Rock & EDM Festival | Todos los derechos reservados. &copy; 2022</p>
     </footer>
     
     <script src="build/js/app.js"></script>
